// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`validate-member should handle validation errors for invalid member data 1`] = `
{
  "content": [
    {
      "text": "{"type":"https://tools.ietf.org/html/rfc9110#section-15.5.1","title":"One or more validation errors occurred.","status":400,"errors":[{"$.$":["JSON deserialization for type 'Umbraco.Cms.Api.Management.ViewModels.Member.CreateMemberRequestModel' was missing required properties including: 'memberType'."]},{"$.requestModel":["The requestModel field is required."]}],"traceId":"normalized-trace-id"}",
      "type": "text",
    },
  ],
  "isError": true,
}
`;

exports[`validate-member should validate a member successfully 1`] = `
{
  "content": [
    {
      "text": "",
      "type": "text",
    },
  ],
}
`;
